--- a/TechDesk/package.json
+++ b/TechDesk/package.json
@@ -7,11 +7,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "moment": "^2.22.2",
     "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.4",
+    "react-native-calendars": "^1.21.0",
     "react-native-elements": "^0.19.1",
+    "react-native-linear-gradient": "^2.4.3",
     "react-native-vector-icons": "^6.0.2",
-    "react-navigation": "^2.18.2"
+    "react-navigation": "^2.18.2",
+    "prop-types": "latest"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
